# linera-non-fungible

./: .gitignore  Cargo.toml  README.md
client/: README.md  go.mod  go.sum  main.go  package.json
client/__tests__/: setup.js  websocket.test.js
client/solver/: client.go  client_test.go  logger.go  types.go
marketplace/: hardhat.config.ts  package.json  tsconfig.json
marketplace/contracts/: NFTMarketplace.sol
marketplace/methods/: buyNFTExample.ts  createAndListNftExample.ts  getMarketplaceAllNFTsExample.ts  getNFTDataExample.ts  getUserNFTsExample.ts  index.ts  listNFTExample.ts
marketplace/scripts/: deployCollection.js
marketplace/utils/: marketplace-details.ts  pinata.ts  utils.ts
src/: contract.rs  lib.rs  service.rs  state.rs
