[package]
name = "non-fungible"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[features]
test = []

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
base64 = "0.22.0"
bcs = "0.1.3"
fungible = { git = "https://github.com/bhaagiKenpachi/linera-fungible", rev = "4c417eb" }
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299" }
serde = { version = "1.0.152", features = ["derive"] }
sha3 = "0.10.8"
universal-solver = { git = "https://github.com/bhaagiKenpachi/universal-solver-linera", rev = "7ccd4c6"}

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
fungible = { git = "https://github.com/bhaagiKenpachi/linera-fungible", rev = "4c417eb", features = ["test"] }
non-fungible = { git = "https://github.com/bhaagiKenpachi/linera-non-fungible", rev = "eb8b4ef", features = ["test"] }
universal-solver = { git = "https://github.com/bhaagiKenpachi/universal-solver-linera", rev = "7ccd4c6"}
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299", features = ["test", "wasmer"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "non_fungible_contract"
path = "src/contract.rs"

[[bin]]
name = "non_fungible_service"
path = "src/service.rs"
